<resources>
    <string name="app_name">GameCenter</string>
    <string name="game_center_app">Game Center App</string>
    <string name="_2048_game">2048 Game</string>
    <string name="peg_solitaire">Peg Solitaire</string>
    <string name="_2048_game_and_peg_solitaire">2048 Game and Peg Solitaire</string>
    <string name="pre_build_version">Pre-build version</string>
    <string name="null_value"> </string>
    <string name="start">Start</string>
    <string name="empty">empty</string>
    <string name="peg">peg</string>
    <string name="restart">restart</string>
    <string name="moves">Moves:</string>
    <string name="_0">0</string>
    <string name="pegs_left">Pegs Left:</string>
    <string name="_32">32</string>
    <string name="menu">MENU</string>
    <string name="undo">Undo</string>
    <string name="score">Score</string>
    <string name="log_in">Log In</string>
    <string name="enter_password">Enter password...</string>
    <string name="enter_username">Enter username...</string>
    <string name="login_screen">Login Screen</string>
    <string name="or_sign_up_instead">- or Sign Up instead -</string>
    <string name="sign_up">Sign Up</string>
    <string name="repeat_password">Repeat Password...</string>
    <string name="user">User:</string>
    <string name="_2048_hs">2048 HS:</string>
    <string name="peg_hs">Peg HS:</string>
    <string name="reset">Reset</string>
    <string name="_00_00">00:00</string>
    <string name="posici_n">Posición</string>
    <string name="usuario">Usuario</string>
    <string name="puntos">Puntos</string>
    <string name="login">Login</string>
    <string name="user_settings">User Settings</string>
    <string name="swipe_the_board_match_equal_tiles_and_try_to_reach_2048">Swipe the board, match equal tiles and try to reach 2048</string>
    <string name="eliminate_all_pegs_until_there_is_only_one_left_as_fast_as_possible">Eliminate all pegs until there is only one left as fast as possible</string>
    <string name="play_peg_solitaire">play peg solitaire</string>
    <string name="play_2048">play 2048</string>
    <string name="play">Play</string>
    <string name="log_out">Log Out</string>
</resources>