<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".MenuActivity">

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="GAME CENTER"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/startGameSelector"
        android:layout_height="wrap_content"
        android:layout_width="150dp"
        android:layout_marginTop="120dp"
        android:text="@string/play"/>

    <Button
        android:id="@+id/startScore"
        android:layout_height="wrap_content"
        android:layout_width="150dp"
        android:text="@string/score"/>

    <Button
        android:id="@+id/userSettings"
        android:layout_height="wrap_content"
        android:layout_width="150dp"
        android:text="@string/user_settings"/>

    <Button
        android:id="@+id/logOut"
        android:layout_height="wrap_content"
        android:layout_width="150dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/log_out"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="90dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Logged in as: "/>

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""/>

    </LinearLayout>

</LinearLayout>