<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Score">

    <TextView
        android:id="@+id/userText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user"/>

    <TextView
        android:id="@+id/userVariable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/userText"
        android:layout_marginStart="30dp"
        android:text="" />

    <TextView
        android:id="@+id/boxHS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userText"
        android:text="@string/_2048_hs" />

    <TextView
        android:id="@+id/boxVariable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/boxHS"
        android:layout_below="@id/userText"
        android:layout_marginStart="6dp"
        android:text="" />

    <TextView
        android:id="@+id/pegHS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/boxHS"
        android:text="@string/peg_hs" />

    <TextView
        android:id="@+id/pegVariable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/pegHS"
        android:layout_below="@id/boxHS"
        android:layout_marginStart="14dp"
        android:text="" />

</RelativeLayout>