<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BoxDisplay">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/grid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:layout_gravity="center"
            android:layout_marginEnd="15dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Score"
                android:textStyle="bold"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textSize="20sp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <Button
            android:id="@+id/undoBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/undo"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"/>

    </LinearLayout>

    <GridLayout
        android:id="@+id/grid"
        style="@style/board"
        android:columnCount="4"
        android:rowCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.705">


        <TextView
            android:id="@+id/view00"
            style="@style/tile"
            android:layout_row="0"
            android:layout_column="0"
            android:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/view01"
            style="@style/tile"
            android:layout_row="0"
            android:layout_column="1"
            android:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/view02"
            style="@style/tile"
            android:layout_row="0"
            android:layout_column="2"
            android:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/view03"
            style="@style/tile"
            android:layout_row="0"
            android:layout_column="3"
            android:autoSizeTextType="uniform"/>

        <TextView
            android:id="@+id/view10"
            style="@style/tile"
            android:layout_row="1"
            android:layout_column="0"
            android:autoSizeTextType="uniform"/>

        <TextView
            android:id="@+id/view11"
            style="@style/tile"
            android:layout_row="1"
            android:layout_column="1"
            android:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/view12"
            style="@style/tile"
            android:layout_row="1"
            android:layout_column="2"
            android:autoSizeTextType="uniform"/>

        <TextView
            android:id="@+id/view13"
            style="@style/tile"
            android:layout_row="1"
            android:layout_column="3"
            android:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/view20"
            style="@style/tile"
            android:layout_row="2"
            android:layout_column="0"
            android:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/view21"
            style="@style/tile"
            android:layout_row="2"
            android:layout_column="1"
            android:autoSizeTextType="uniform"/>

        <TextView
            android:id="@+id/view22"
            style="@style/tile"
            android:layout_row="2"
            android:layout_column="2"
            android:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/view23"
            style="@style/tile"
            android:layout_row="2"
            android:layout_column="3"
            android:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/view30"
            style="@style/tile"
            android:layout_row="3"
            android:layout_column="0"
            android:autoSizeTextType="uniform"/>

        <TextView
            android:id="@+id/view31"
            style="@style/tile"
            android:layout_row="3"
            android:layout_column="1"
            android:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/view32"
            style="@style/tile"
            android:layout_row="3"
            android:layout_column="2"
            android:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/view33"
            style="@style/tile"
            android:layout_row="3"
            android:layout_column="3"
            android:autoSizeTextType="uniform" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>